Changes - public search of books
